--- a/freshshop-master_1차/adminpage2vetmange-tom.html
+++ b/freshshop-master_1차/adminpage2vetmange-tom.html
@@ -29,7 +29,7 @@
     <link rel="stylesheet" href="css/custom.css">
     <!-- Custom-tom CSS -->
     <link rel="stylesheet" href="css/custom-tom.css">
-    
+    <link rel="stylesheet" href="css/custom-jaeseok.css" /> <!--Nov30th, jaeskaa's css was added at 11:04am-->    
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
       <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
@@ -69,7 +69,7 @@
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-menu" aria-controls="navbars-rs-food" aria-expanded="false" aria-label="Toggle navigation">
                 <i class="fa fa-bars"></i>
             </button>
-                <a class="navbar-brand" href="index.html"><img src="images/pawmaplogo.png" class="logo" alt="" width="216" height="118"></a>
+                <a class="navbar-brand" href="index.html"><div class="main_logo_box"></div></a>
             </div>
             <!-- End Header Navigation -->
 
@@ -108,18 +108,19 @@
         <!--제휴병원 관리 리스트 부분시작...-->
         <!--nov25th, table style margin left and right were changed from auto to 3%, colgroup were added with width % value -->
           <div class="associatedvetlist" style="margin-top: 40px;">
-            <table class="table-list" style="margin-left: 3%; margin-right: 3%; text-align: center; border: 1px solid black">
-              <colgroup>
-                <col style="width:3%;">
-                <col style="width:5%;">
-                <col style="width:8%;">
-                <col style="width:12%;">
-                <col style="width:8%;">
-                <col style="width:14%;">
-                <col style="width:8%;">
-                <col style="width:3%;">
-                <col style="width:10%;">
-                <col style="width:7%;"> <!--consider binding the custom-tom.css file. this comment was left on november 25th 20:34pm by thomas lee-->
+            <table class="table-striped table-hover" style="margin-left: 3%; margin-right: 3%; text-align: center;">
+              <colgroup style ="margin-left: auto; margin-right: auto;">
+                <col style="width:3%; height:2%;">
+                <col style="width:5%; height:2%;">
+                <col style="width:8%; height:2%;">
+                <col style="width:12%; height:2%;">
+                <col style="width:8%; height:2%;">
+                <col style="width:14%; height:2%;">
+                <col style="width:8%; height:2%;">
+                <col style="width:4%; height:2%;">
+                <col style="width:10%; height:2%;">
+                <col style="width:7%; height:2%;">
+                <!--consider binding the custom-tom.css file. this comment was left on november 25th 20:34pm by thomas lee-->
               </colgroup>  
               <thead style="background-color: lightgray">
                   <tr>
@@ -146,7 +147,7 @@
                       <td>74541845612354</td>
                       <td>일반</td>
                       <td>2021-11-24 16:54:38</td>
-                      <td><button style="margin-left: 30px; border-style: none;" type="button" onclick="location.href='adminpage3vetmodify-tom.html'">관리하기</button></td>
+                      <td><button style="margin: auto; border-style: none; cursor:pointer;" type="button" onclick="location.href='adminpage3vetmodify-tom.html'">관리하기</button></td>
                   </tr>
                   <tr>
                       <td>2</td>
@@ -158,7 +159,7 @@
                       <td>99991845612354</td>
                       <td>병원</td>
                       <td>2021-11-24 15:54:38</td>
-                      <td><button style="margin-left: 30px; border-style: none;" type="button" onclick="location.href='adminpage3vetmodify-tom.html'">관리하기</button></td>
+                      <td><button style="margin: auto; border-style: none; cursor:pointer;" type="button" onclick="location.href='adminpage3vetmodify-tom.html'">관리하기</button></td>
                   </tr>
                   <tr>
                       <td>3</td>
@@ -170,7 +171,7 @@
                       <td>74541845612354</td>
                       <td></td>
                       <td></td>
-                      <td><button style="margin-left: 30px; border-style: none;" type="button" onclick="location.href='adminpage3vetmodify-tom.html'">관리하기</button></td>
+                      <td><button style="margin: auto; border-style: none; cursor:pointer;" type="button" onclick="location.href='adminpage3vetmodify-tom.html'">관리하기</button></td>
                   </tr>
                   <tr>
                       <td>4</td>
@@ -182,7 +183,7 @@
                       <td>74541845612354</td>
                       <td></td>
                       <td></td>
-                      <td><button style="margin-left: 30px; border-style: none;" type="button" onclick="location.href='adminpage3vetmodify-tom.html'">관리하기</button></td>
+                      <td><button style="margin: auto; border-style: none; cursor:pointer;" type="button" onclick="location.href='adminpage3vetmodify-tom.html'">관리하기</button></td>
                   </tr>
                   <tr>
                       <td>5</td>
@@ -194,7 +195,7 @@
                       <td>74541845612354</td>
                       <td></td>
                       <td></td>
-                      <td><button style="margin-left: 30px; border-style: none;" type="button" onclick="location.href='adminpage3vetmodify-tom.html'">관리하기</button></td>
+                      <td><button style="margin: auto; border-style: none; cursor:pointer;" type="button" onclick="location.href='adminpage3vetmodify-tom.html'">관리하기</button></td>
                   </tr>
                 </tbody>
               </table>
