--- a/freshshop-master_1차/adminpage6sheltermanage-tom.html
+++ b/freshshop-master_1차/adminpage6sheltermanage-tom.html
@@ -29,7 +29,7 @@
     <link rel="stylesheet" href="css/custom.css">
     <!-- Custom-tom CSS -->
     <link rel="stylesheet" href="css/custom-tom.css">   
-
+    <link rel="stylesheet" href="css/custom-jaeseok.css" /> <!--Nov30th, jaeskaa's css was added at 10:45am-->
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
       <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
@@ -66,12 +66,12 @@
         <div class="container">
             <!-- Start Header Navigation -->
             <div class="navbar-header">
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-menu" aria-controls="navbars-rs-food" aria-expanded="false" aria-label="Toggle navigation">
-                <i class="fa fa-bars"></i>
-            </button>
-                <a class="navbar-brand" href="index.html"><img src="images/pawmaplogo.png" class="logo" alt="" width="216" height="118"></a>
-            </div>
-            <!-- End Header Navigation -->
+              <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-menu" aria-controls="navbars-rs-food" aria-expanded="false" aria-label="Toggle navigation">
+              <i class="fa fa-bars"></i>
+          </button>
+              <a class="navbar-brand" href="index.html"><div class="main_logo_box"></div></a>
+          </div>
+          <!-- End Header Navigation -->
 
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="navbar-menu">
@@ -107,79 +107,104 @@
         <!--search button finished...-->
         <!--보호소정보 관리 리스트 시작-->
         <!--nov29th, table style margin left and right were changed from auto to 3%, colgroup were added with width % value -->
-        <div style="margin-top: 40px;">
-          <form id="thismustcalldbfrompawmapuser" action="must put method" name="POST" method="GET"><!-- tom is working on this section on nov 26th 5:20pm-->
-          <table class="table-list" style="margin-left: auto; margin-right: auto; text-align: center;">
-            <colgroup>
-              <col style="width:3%;">
-              <col style="width:5%;">
-              <col style="width:8%;">
-              <col style="width:12%;">
-              <col style="width:8%;">
-              <col style="width:14%;">
-              <col style="width:8%;">
-              <col style="width:3%;">
-              <col style="width:10%;">
-              <col style="width:7%;">
-              <!--consider binding the custom-tom.css file. this comment was left on november 25th 20:34pm by thomas lee-->
-            </colgroup>
-            <thead style="background-color: lightgray">
-              <tr>
-                    <th>#</th>
-                    <th>이름</th>
-                    <th>사업자등록번호</th>
-                    <th>연락처</th>
-                    <th>관리</th>
-                    <th>액션</th>
+        <div class="associatedvetcenterlist" style="margin-top: 40px;">
+          <!--<form id="thismustcalldbfrompawmapuser" action="must put method" name="POST" method="GET">--><!-- tom is working on this section on nov 26th 5:20pm-->
+            <table class="table-striped table-hover" style="margin-left: 3%; margin-right: 3%; text-align: center;">
+              <colgroup style ="margin-left: auto; margin-right: auto;">
+                <col style="width:3%; height:2%;">
+                <col style="width:5%; height:2%;">
+                <col style="width:8%; height:2%;">
+                <col style="width:12%; height:2%;">
+                <col style="width:8%; height:2%;">
+                <col style="width:14%; height:2%;">
+                <col style="width:8%; height:2%;">
+                <col style="width:4%; height:2%;">
+                <col style="width:10%; height:2%;">
+                <col style="width:7%; height:2%;">
+                <!--consider binding the custom-tom.css file. this comment was left on november 25th 20:34pm by thomas lee-->
+              </colgroup>
+              <thead style="background-color: lightgray">
+                <tr>
+                      <th>#</th>
+                      <th>이름</th>
+                      <th>사업자등록번호</th>
+                      <th>연락처</th>
+                      <th>5555</th>
+                      <th>6666</th>
+                      <th>7777</th>
+                      <th>8888</th>
+                      <th>관리</th>
+                      <th>액션</th>
+                  </tr>
+              </thead>
+              <tbody><!-- 4:49 pm on nov 29th tom is working on this section... -->
+                <tr>
+                    <td>1</td>
+                    <td>일산 보호소</td>
+                    <td>002-20-00010</td>
+                    <td>031-222-5432</td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td><button style="margin: auto; border-style: none; cursor:pointer;" type="button" onclick="location.href='adminpage8sheltermodify-tom.html'">관리하기</button></td>
+                    <td><button style="margin: auto; border-style: none; cursor:pointer;" type="button" onclick="location.href='#'">삭제</button></td>
                 </tr>
-            </thead>
-            <tbody><!-- 4:49 pm on nov 29th tom is working on this section... -->
-              <tr>
-                  <td>1</td>
-                  <td>일산 보호소</td>
-                  <td>002-20-00010</td>
-                  <td>031-222-5432</td>
-                  <td><button style="margin-left: 30px;" type="button" onclick="location.href='adminpage8sheltermodify-tom.html'">관리하기</button></td>
-                  <td><button style="margin-left: 30px;" type="button" onclick="location.href='#'">삭제</button></td>
-              </tr>
-              <tr>
-                  <td>2</td>
-                  <td>강남 보호소</td>
-                  <td>002-20-00010</td>
-                  <td>031-222-5432</td>
-                  <td><button style="margin-left: 30px;" type="button" onclick="location.href='adminpage8sheltermodify-tom.html'">관리하기</button></td>
-                  <td><button style="margin-left: 30px;" type="button" onclick="location.href='#'">삭제</button></td>
-              </tr>
-              <tr>
-                  <td>3</td>
-                  <td>분당 보호소</td>
-                  <td>002-20-00010</td>
-                  <td>031-222-5432</td>
-                  <td><button style="margin-left: 30px;" type="button" onclick="location.href='adminpage8sheltermodify-tom.html'">정보수정</button></td>
-                  <td><button style="margin-left: 30px;" type="button" onclick="location.href='#'">삭제</button></td>
-              </tr>
-              <tr>
-                  <td>4</td>
-                  <td>송파 보호소</td>
-                  <td>002-20-00010</td>
-                  <td>031-222-5432</td>
-                  <td><button style="margin-left: 30px;" type="button" onclick="location.href='adminpage8sheltermodify-tom.html'">정보수정</button></td>                <td><button style="margin-left: 30px;" type="button" onclick="location.href='#'">삭제</button></td>
-              </tr>
-              <tr>
-                  <td>5</td>
-                  <td>종로 보호소</td>
-                  <td>002-20-00010</td>
-                  <td>031-222-5432</td>
-                  <td><button style="margin-left: 30px;" type="button" onclick="location.href='adminpage8sheltermodify-tom.html'">정보수정</button></td>
-                  <td><button style="margin-left: 30px;" type="button" onclick="location.href='#'">삭제</button></td>
-              </tr>
-            </tbody>   
+                <tr>
+                    <td>2</td>
+                    <td>강남 보호소</td>
+                    <td>002-20-00010</td>
+                    <td>031-222-5432</td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td><button style="margin: auto; border-style: none; cursor:pointer;" type="button" onclick="location.href='adminpage8sheltermodify-tom.html'">관리하기</button></td>
+                    <td><button style="margin: auto; border-style: none; cursor:pointer;" type="button" onclick="location.href='#'">삭제</button></td>
+                </tr>
+                <tr>
+                    <td>3</td>
+                    <td>분당 보호소</td>
+                    <td>002-20-00010</td>
+                    <td>031-222-5432</td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td><button style="margin: auto; border-style: none; cursor:pointer;" type="button" onclick="location.href='adminpage8sheltermodify-tom.html'">정보수정</button></td>
+                    <td><button style="margin: auto; border-style: none; cursor:pointer;" type="button" onclick="location.href='#'">삭제</button></td>
+                </tr>
+                <tr>
+                    <td>4</td>
+                    <td>송파 보호소</td>
+                    <td>002-20-00010</td>
+                    <td>031-222-5432</td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td><button style="margin: auto; border-style: none; cursor:pointer;" type="button" onclick="location.href='adminpage8sheltermodify-tom.html'">정보수정</button></td>
+                    <td><button style="margin: auto; border-style: none; cursor:pointer;" type="button" onclick="location.href='#'">삭제</button></td>
+                </tr>
+                <tr>
+                    <td>5</td>
+                    <td>종로 보호소</td>
+                    <td>002-20-00010</td>
+                    <td>031-222-5432</td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td><button style="margin: auto; border-style: none; cursor:pointer;" type="button" onclick="location.href='adminpage8sheltermodify-tom.html'">정보수정</button></td>
+                    <td><button style="margin: auto; border-style: none; cursor:pointer;" type="button" onclick="location.href='#'">삭제</button></td>
+                </tr>
+              </tbody>   
           </table>
         </div>
         <div style="margin-top: 40px">
           <table style="margin-left:auto; margin-right:auto; text-align: center;">
               <tr>
-                  <td><button style="margin: center;" type="button" onclick="location.href='adminpage7shelteradd-tom.html'">보호소 등록</button></td>
+                  <td><button style="margin: auto; border-style: none; cursor:pointer;" type="button" onclick="location.href='adminpage7shelteradd-tom.html'">보호소 등록</button></td>
               </tr>
           </table>
         </div>
